[package]
name = "capbugger"
version = "2.3.0"
description = "CapBugger Beta 1 - The Ultimate CapCut Companion"
authors = ["USER"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
fs_extra = "1.3"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "processthreadsapi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
